@@ -17,13 +17,14 @@ alias pa_tag-edit='php -r "require_once '"'"'utils/tag-edit.php'"'"';" $@'
 alias pa_upload-config='php -r "require_once '"'"'utils/upload-config.php'"'"';" $@'
 alias pa_override-finder='php -r "require_once '"'"'utils/override-finder.php'"'"';" $@'
 alias pa_userid-mgr='php -r "require_once '"'"'utils/userid-mgr.php'"'"';" $@'
+alias pa_register-ip-mgr='php -r "require_once '"'"'utils/register-ip-mgr.php'"'"';" $@'
 
 alias pa_key-manager='php -r "require_once '"'"'utils/key-manager.php'"'"';" $@'
 
 alias pa_ckp-exclude='php -r "require_once '"'"'utils/checkpoint-exclude.php'"'"';" $@'
 
 alias pa_download-predefined='php -r "require_once '"'"'utils/download_predefined.php'"'"';" $@'
-
+alias pa_diff='php -r "require_once '"'"'utils/pan-diff.php'"'"';" $@'
 
 
 
